--- a/percobaan.html
+++ b/percobaan.html
@@ -4,6 +4,20 @@
 	<title></title>
 </head>
 <body>
+	<!-- Mulai Header -->
+	<header>
+		<!-- Start Navbar -->
+		<div class="navbar">
+			
+		</div>
+		<!-- End Navbar -->
+	</header>
+	<!-- End Header -->
 
+	<!-- Start About Us -->
+	<div class="sect-aboutus">
+		
+	</div>
+	<!-- End About Us -->
 </body>
 </html>
